# LMA

./: .gitignore  README.md  meson.build
Source/: approximation_test.cpp  main.cpp
Source/CPU/: FFTWData.h  InputWave.h  InputWave_aux.h  MSData.h  MSData_aux.h  MultisliceAlgorithmCPU.h  ProbeApproximation.h  ProbeApproximation_aux.h  PropagationFunction.h  PropagationFunction_aux.h  PropagationWindow.h  SimulationWindow.h  TransmissionFunction.h  TransmissionFunction_aux.h
Source/LMA/: LMAStrategy.h  LMAStrategy_aux.h  LatticeMultisliceAlgorithm.h  LatticeMultisliceAlgorithm_aux.h  OutputWindow.h
Source/Utility/: AlignedArray.h  Atom.h  CircularImage.h  Error.h  Image.h  Image3D.h  Lattice.h  Param.h  Param_aux.h  Specimen.h  complex.h  potential_coeff.h  utility.h
Specimen/: Example.param  Sample.xyz
